validator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cn-val
  labels:
    app: cn-val
spec:
  selector:
    matchLabels:
      app: cn-val
  replicas: 2
  template:
    metadata:
      labels:
        app: cn-val
    spec:
      containers:
      - name: val
        imagePullPolicy: Always
        image: djohnnie/csharpwars-cloudnative-validator:1.0.0
        resources:
          requests:
            cpu: 250m            
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 256Mi
        ports:
        - containerPort: 5000
