api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cn-api-svc
  labels:
    app: cn-api
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: cn-api
