validator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cn-val-svc
  labels:
    app: cn-val
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: cn-val
